change db properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/online_store?useUnicode=true&serverTimezone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/p-329534_eco-debut?useUnicode=true&serverTimezone=UTC
+spring.datasource.username=p-329534_ayaulym
+spring.datasource.password=ayau2001
 server.port=8000
 
 spring.mail.host=smtp.gmail.com
