--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/online_store?useUnicode=true&serverTimezone=UTC
-spring.datasource.username=postgres
+spring.datasource.username=postgres1
 spring.datasource.password=root
 server.port=8000
 
